# MagicCircuit

./: Cargo.toml  README.md
resources/fonts/: TengwarAnnatarSource.txt
src/: lambda_calculus_parser.rs  main.rs  ogham.rs
