[package]
name = "magic_circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
resvg = "0.41.0"
svg = "0.17.0"
